Bug fixes
- Prevented zoom on mobile
- Prevented text from overflowing on todo items
- Made search insensible to case
- Made completed tasks appear last in list view
- Fixed title and description

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@
 
 .verticalView header h1 {
     text-align: center;
+    margin-block: 0;
 }
 
 .verticalView .logo {
@@ -275,7 +276,7 @@ input[type="range" i] {
 
 .listContainer li {
     width: 100%;
-    min-height: 50px;
+    min-height: fit-content;
     background-color: var(--main-color);
     color: white;
     border-radius: var(--border-radius);
